@@ -109,6 +109,7 @@ GEANT4_DEFINE_MODULE(NAME G4hadronic_xsect
 	G4UPiNuclearCrossSection.hh
 	G4VComponentCrossSection.hh
 	G4VCrossSectionDataSet.hh
+	G4VCrossSectionRatio.hh
 	G4CrossSectionFactoryRegistry.hh
     SOURCES
 	G4BGGNucleonElasticXS.cc
@@ -175,6 +176,7 @@ GEANT4_DEFINE_MODULE(NAME G4hadronic_xsect
 	G4UPiNuclearCrossSection.cc
 	G4VComponentCrossSection.cc
 	G4VCrossSectionDataSet.cc
+	G4VCrossSectionRatio.cc
 	G4CrossSectionFactoryRegistry.cc
     GRANULAR_DEPENDENCIES
         G4baryons
